# mocksipipeline

./: .gitignore  .pre-commit-config.yaml  LICENSE  NOTES.md  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
docs/: conf.py  index.rst
mocksipipeline/: __init__.py  modeling.py  net.py  pipeline.py  util.py  visualization.py
mocksipipeline/data/: MOXSI_effarea.genx  chianti-spectrum.asdf
mocksipipeline/detector/: __init__.py  component.py  design.py  filter.py  response.py
mocksipipeline/detector/tests/: test_channel.py
mocksipipeline/instrument/: configuration.py  design.py
mocksipipeline/instrument/configuration/: __init__.py  moxsi_cdr.py  moxsi_short.py  moxsi_slot.py
mocksipipeline/instrument/optics/: aperture.py  configuration.py  design.py  filter.py  response.py
mocksipipeline/instrument/optics/tests/: test_channel.py
mocksipipeline/inversion/: response_matrix.py
mocksipipeline/physics/: __init__.py
mocksipipeline/physics/dem/: __init__.py  data_prep.py  dem_algorithms.py  dem_algorithms_fast.py  dem_models.py
mocksipipeline/physics/spectral/: __init__.py
mocksipipeline/spectral/: __init__.py
pipeline/config/: config.yml
pipeline/workflow/: Snakefile  run_pipelines.sh
pipeline/workflow/scripts/: calculate_dem.py  calculate_spectral_cube.py  calculate_uncertainty.py  download_data.py  prep_data.py  project_intensity_cubes.py  sum_detector_components.py
tools/: generate_spectral_table.py
