[metadata]
name = mocksipipeline
author = Will Barnes
author_email = will.t.barnes@gmail.com
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url =
description = Pipeline for generating synthetic MOXSI data
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.9
setup_requires = setuptools_scm
install_requires =
    aiapy
    asdf-astropy
    astropy
    dask
    distributed
    demregpy
    ndcube
    overlappy @ git+https://github.com/wtbarnes/overlappy.git@main
    parse
    scipy
    snakemake
    sunkit-dem @ git+https://github.com/sunpy/sunkit-dem.git@main
    sunpy[all]>=4.1
    synthesizAR[atomic] @ git+https://github.com/wtbarnes/synthesizAR.git@main
    thermo
    xarray
    xrt
    xrtpy @ git+https://github.com/HinodeXRT/xrtpy.git@main

[options.extras_require]
all =
test =
    pytest
    pytest-doctestplus
    pytest-cov
docs =
    sphinx
    sphinx-automodapi

[options.package_data]
mocksipipeline.instrument.optics = data/hetgD1996-11-01greffpr001N0007.fits
mocksipipeline.spectral = data/*.asdf

[tool:pytest]
testpaths = "mocksipipeline" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
  mocksipipeline/__init*
  mocksipipeline/conftest.py
  mocksipipeline/*setup_package*
  mocksipipeline/tests/*
  mocksipipeline/*/tests/*
  mocksipipeline/extern/*
  mocksipipeline/version*
  */mocksipipeline/__init*
  */mocksipipeline/conftest.py
  */mocksipipeline/*setup_package*
  */mocksipipeline/tests/*
  */mocksipipeline/*/tests/*
  */mocksipipeline/extern/*
  */mocksipipeline/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
